# bearbot

./: .env.example  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: client.rs  lib.rs  main.rs  settings.rs  strings.rs  utils.rs
src/commands/: math.rs  meta.rs  mod.rs
src/events/: idle_handler.rs  mod.rs  serenity_handler.rs
